<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.brts</groupId>

    <artifactId>jebml</artifactId>
    <version>2.4.0</version>
    <packaging>jar</packaging>

    <name>BRTS jebml</name>
    <description>Matroska muxer/demuxer for BRT</description>
    <url>https://github.com/PabloAbreu/jebml</url>

    <licenses>
        <license>
            <name>GNU Lesser General Public License, version 2.1</name>
            <url>https://www.gnu.org/licenses/old-licenses/lgpl-2.1.en.html</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Michael Jameson</name>
            <url>https://github.com/mjameson-se</url>
        </developer>
        <developer>
            <name>Matt Wharton</name>
            <url>https://github.com/goku3989</url>
        </developer>
        <developer>
            <name>Mike Childs</name>
            <url>https://github.com/redwheelbarrow</url>
        </developer>
        <developer>
            <name>Dominic D'Souza</name>
            <url>https://github.com/ddsouz</url>
        </developer>
        <developer>
            <name>Moritz Bunkus</name>
            <url>http://www.bunkus.org/</url>
        </developer>
        <developer>
            <name>Steve Lhomme</name>
            <url>https://github.com/robUx4</url>
        </developer>
        <developer>
            <name>Denis Kokorin</name>
            <url>https://github.com/kokorin</url>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/PabloAbreu/jebml.git</connection>
        <developerConnection>scm:git:ssh://github.com/PabloAbreu/jebml.git</developerConnection>
        <url>https://github.com/PabloAbreu/jebml/tree/master</url>
    </scm>


    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.11.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.12.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.26.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.13</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.38</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.3.1</version>
            </plugin>
        </plugins>
    </build>
</project>